<resources>
    <string name="app_name">基金云</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">我的</string>
    <string name="title_message">消息</string>
    <string name="title_sort">分类</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_modify_password">查看下载内容</string>
    <string name="action_download">下载内容</string>
    <string name="title_detail">标题</string>
    <string name="txt_jump">跳过</string>
    <string name="title_records">浏览记录</string>
    <string name="title_follow">我的关注</string>
    <string name="title_person_info">个人信息</string>
    <string name="title_input_info">完善个人信息</string>
    <string name="title_lxdz">联系地址</string>
    <string name="login_txt_phone">请输入您的手机号</string>
    <string name="login_txt_code">请输入验证码</string>
    <string name="get_btn_code">获取验证码</string>
    <string name="login_ed_pass">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_btn_guest">游客登录</string>
    <string name="login_pass">密码登录</string>
    <string name="register_btn">注册</string>
    <string name="txt_head">头像</string>
    <string name="txt_nick_name">昵称</string>
    <string name="txt_name">姓名</string>
    <string name="txt_sex">性别</string>
    <string name="txt_age">年龄</string>
    <string name="txt_profession">职业</string>
    <string name="txt_email">邮箱</string>
    <string name="txt_bind_email">绑定邮箱</string>
    <string name="cancel">取消</string>
    <string name="txt_login_quick">快捷登录</string>
    <string name="tip_age">请输入您的年龄</string>
    <string name="tip_nick_name">请输入2-8个汉字</string>
    <string name="tip_name">请输入2-6个汉字</string>
    <string name="tip_email">请输入您要绑定的邮箱</string>
    <string name="tip_profession">请输入您的职业</string>
    <string name="tip_search">请输入公司名称、管理人名称或备案编码</string>
    <string name="tip_tel_phone">请输入您的电话号码</string>
    <string name="tip_city">请输入您所在的城市</string>
    <string name="txt_city">城市</string>
    <string name="txt_phone">电话</string>
    <string name="txt_news">新闻速报</string>
    <string name="tip_company_name">公司名称</string>
    <string name="txt_camera">相机</string>
    <string name="txt_album">相册</string>
    <string name="txt_cancel">取消</string>
    <string name="btn_finish">完成</string>
    <string name="btn_close">关闭</string>
    <string name="btn_comment">评论</string>
    <string name="btn_share">分享</string>
    <string name="btn_download">下载</string>
    <string name="btn_fund_enterprise">基金管理公司</string>
    <string name="btn_fund_person">基金托管人</string>
    <string name="btn_assets_org">资产管理类机构</string>
    <string name="btn_fund_sale">基金销售机构</string>
    <string name="btn_fund_comment">基金评价机构</string>
    <string name="btn_fund_comment_name">基金销售机构名称</string>
    <string name="btn_pay_org">支付结算机构</string>
    <string name="btn_pay_org_name">支付结算机构名称</string>
    <string name="btn_lawyer_org">律师事务所</string>
    <string name="btn_lawyer_org_name">律师事务所名称</string>
    <string name="btn_accountant">会计师事务所</string>
    <string name="btn_accountant_name">会计师事务所名称</string>
    <string name="btn_info_service">信息技术系统服务机构</string>
    <string name="btn_info_service_name">信息技术系统服务机构名称</string>
    <string name="txt_institutional_org">从业机构</string>
    <string name="txt_credit_info">诚信信息</string>
    <string name="txt_fund_products">基金产品</string>
    <string name="txt_practitioners">从业人员</string>
    <string name="txt_no_registration">不予登记机构</string>
    <string name="txt_disciplinary_action">纪律处分</string>
    <string name="txt_black_list">黑名单</string>
    <string name="txt_private_products">证券公司私募产品备案</string>
    <string name="txt_private_products_enter">证券公司私募产品备案确认函</string>
    <string name="txt_asset_manage">证券公司资管产品备案信息公示</string>
    <string name="txt_zqgszgcp">证券公司资管产品</string>
    <string name="txt_zqgsztjj">证券公司直投基金</string>
    <string name="txt_assert_support">资产支持专项计划信息公示</string>
    <string name="txt_assert_support_enter">资产支持专项计划备案确认函公示</string>
    <string name="txt_future_products">期货公司资管产品</string>
    <string name="txt_direct_fund">证券公司直投基金公示信息</string>
    <string name="txt_private_fund">证券公司私募投资基金</string>
    <string name="txt_pub_person">公募基金管理人</string>
    <string name="txt_cancel_manage">撤销管理人登记的名单</string>
    <string name="txt_sale_count">销售账户</string>
    <string name="txt_xhhy">协会会员</string>
    <string name="txt_employee_publicity">从业人员公示</string>
    <string name="txt_qualification_menu">从业资格考试大纲</string>
    <string name="txt_qualification_reserve">从业资格考试教材订购</string>
    <string name="txt_qualification_enroll">从业资格考试报名</string>
    <string name="txt_qualification_info">从业资格考试信息</string>
    <string name="txt_qualification_search">从业资格考试成绩查询</string>
    <string name="txt_qualification__enroll_week">从业资格考试周考报名</string>
    <string name="txt_web_title">新闻速递</string>
    <string name="tip_search_condition">更多筛选</string>
    <string name="tip_key_words">关键字</string>
    <string name="tip_ed">请输入登记编号\私募基金管理人名称或法定代表人\执行事务</string>
    <string name="tip_smjjglrgsxx">私募基金管理人公示信息</string>
    <string name="txt_3_months">最近三个月</string>
    <string name="txt_1_months">最近一个月</string>
    <string name="txt_1_zjyjd">最近一季度</string>
    <string name="txt_1_year">最近一年</string>
    <string name="txt_time_create">成立时间</string>
    <string name="txt_time_sign">登记时间</string>
    <string name="txt_tip_content">提示事项</string>
    <string name="txt_org_type">机构类型</string>
    <string name="txt_org_leibie">机构类别</string>
    <string name="txt_sign_number">登记编号</string>
    <string name="txt_sign_address">注册地</string>
    <string name="txt_sign_address2">注册地址</string>
    <string name="btn_search">查询</string>
    <string name="btn_clear_condition">清空条件</string>
    <string name="btn_qdtgywzgsj">取得托管业务资格时间</string>
    <string name="btn_kf_phone">客服电话</string>
    <string name="btn_scale_0">管理规模为零</string>
    <string name="btn_scale_0_than">登记一年以上管理规模为零</string>
    <string name="btn_low_capital">管理人实缴资本低于注册资本25%</string>
    <string name="btn_low_100w">管理人实缴资本低于100万</string>
    <string name="btn_abnormal_liquidation">非正常清算</string>
    <string name="btn_without_qualifications">高管人员无证券投资基金从业资格</string>
    <string name="btn_without_hint">无提示事项</string>
    <string name="btn_administrator">私募证券投资基金管理人</string>
    <string name="btn_administrator_create">私募股权、创业投资基金管理人</string>
    <string name="btn_administrator_other">其他私募投资基金管理人</string>
    <string name="btn_ywhzsj">业务核准时间</string>
    <string name="tv_country">全国</string>
    <string name="txt_personal_pub">私募基金公示</string>
    <string name="txt_personal_pub_info">私募基金公示信息</string>
    <string name="txt_org_pub">从业机构公示</string>
    <string name="txt_personal_org_pub">私募基金服务机构公示</string>
    <string name="txt_look_all">点击查看全部</string>
    <string name="btn_fund_record">基金备案阶段</string>
    <string name="btn_case_before">暂行办法实施前成立的基金</string>
    <string name="btn_case_after">暂行办法实施后成立的基金</string>
    <string name="btn_manage_type">管理类型</string>
    <string name="btn_manage_entrust">受托管理</string>
    <string name="btn_manage_self">自我管理</string>
    <string name="btn_manage_adviser">顾问管理</string>
    <string name="btn_run_state">运作状态</string>
    <string name="btn_running">正在运作</string>
    <string name="btn_liquidation_late">延期清算</string>
    <string name="btn_liquidation_before">提前清算</string>
    <string name="btn_normal_liquidation">正常清算</string>
    <string name="btn_protocol_end">投顾协议已终止</string>
    <string name="txt_manage_name">管理人名称</string>
    <string name="txt_tuo_name">托管人名称</string>
    <string name="txt_record_time">备案日期</string>
    <string name="txt_type_zhuanhu">专户类型</string>
    <string name="txt_beian_number">备案编码</string>
    <string name="txt_black_tip">以下人员因违反法律法规和自律规则，本会已作出加入黑名单的纪律处分。再加入黑名单期间，以下人员不得在我会等级的私募基金管理人从业。</string>
    <string name="txt_products_name">产品名称</string>
    <string name="txt_manage_org">管理机构</string>
    <string name="txt_org_name">机构名称</string>
    <string name="txt_products_number">产品编码</string>
    <string name="txt_create_time">设立日期</string>
    <string name="txt_clrq">成立日期</string>
    <string name="txt_number">序号</string>
    <string name="txt_bianhao">编号</string>
    <string name="txt_babh">备案编号</string>
    <string name="txt_search_condition">请您填写查询条件（证件号码）</string>
    <string name="txt_achievement_search">成绩查询</string>
    <string name="txt_result_search">查询结果</string>
    <string name="txt_certificates">证件</string>
    <string name="txt_certificates_number">证件号码</string>
    <string name="txt_test_time">考试时间</string>
    <string name="txt_test_subject">考试科目</string>
    <string name="txt_test_result">考试成绩</string>
    <string name="txt_is_adopt">是否通过</string>
    <string name="txt_test_print">成绩合格证书打印</string>
    <string name="tip_contract_us">联系我们</string>
    <string name="tip_telephone_contract">电话：0109252908142</string>
    <string name="tip_email_contract">邮箱：563278285@qq.com</string>
    <string name="tip_address_contract">地址：北京市通州万达广场A座2015</string>
    <string name="tip_vip">VIP会员</string>
    <string name="tip_ptyh">普通用户</string>
    <string name="tip_vip_open">开通会员</string>
    <string name="tip_help">帮助与反馈</string>
    <string name="tip_feedback">反馈截图</string>
    <string name="tip_feedback_hint">请留下您的宝贵意见，我们将不断完善</string>
    <string name="txt_title_feedback">意见反馈</string>
    <string name="tip_info_public">信息公示</string>
    <string name="tip_test_platform_">考试平台</string>
    <string name="tip_per_search_">私募基金管理人查询</string>
    <string name="tip_product_public_">基金专户产品公示</string>
    <string name="tip_private_name">基金名称</string>
    <string name="tip_private_number">基金编号</string>
    <string name="tip_basj">备案时间</string>
    <string name="tip_fund_type">基金类型</string>
    <string name="tip_money_type">币种</string>
    <string name="tip_manage_name">基金管理人名称</string>
    <string name="tip_last_time">最后更新时间</string>
    <string name="tip_special">特别提示</string>
    <string name="tip_tbtsxx">特别提示信息</string>
    <string name="tip_xxplqk">信息披露情况</string>
    <string name="tip_month_bao">月报</string>
    <string name="tip_half_year_bao">半年报</string>
    <string name="tip_year_bao">年报</string>
    <string name="tip_ji_bao">季报</string>
    <string name="tip_web">网址</string>
    <string name="tip_website">官方网站</string>
    <string name="tip_fund_wait_type">基金业服务类型</string>
    <string name="tip_jjgm">基金规模</string>
    <string name="tip_smzqjjzzfx">私募证券基金（自主发行）</string>
    <string name="tip_smzqjjgwgl">私募证券基金（顾问管理）</string>
    <string name="tip_smgqjj">私募股权基金</string>
    <string name="tip_cytzzj">创业投资资金</string>
    <string name="tip_smzqjj">私募证券基金</string>
    <string name="tip_sljg">失联机构</string>
    <string name="tip_ycjg">异常机构</string>
    <string name="tip_xjtb">虚假填报</string>
    <string name="tip_zdyl">重大遗漏</string>
    <string name="tip_wfbtdx">违反八条底线</string>
    <string name="tip_xgztczblcxjl">相关主体存在不良诚信记录</string>
    <string name="tip_search_all">综合查询</string>
    <string name="tip_smjjglrmc">私募基金管理人名称</string>
    <string name="tip_fddbrzxswhhr">法定代表人/执行事务合伙人（委派代表）姓名</string>
    <string name="tip_smjjglrflgs">私募基金管理人分类公示</string>
    <string name="tip_ztzgs">直投子公司</string>
    <string name="tip_yyksrk">预约考试入口</string>
    <string name="tip_qgtkrk">全国统考入口</string>
</resources>