<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_46"
    android:background="@drawable/ic_include_back">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="@dimen/image_margin"
        android:text="@string/cancel"
        android:textColor="@color/color_13"
        android:textSize="@dimen/text_size_14"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_height_42"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/txt_login_quick"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/image_margin"
        android:gravity="center"
        android:text="@string/register_btn"
        android:textColor="@color/color_13"
        android:textSize="@dimen/text_size_14"
        android:visibility="visible" />

</FrameLayout>
