<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_include_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:background="@color/black_f4" />

    <RelativeLayout
        android:id="@+id/rel_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_60"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_head"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="@dimen/layout_height_42"
            android:layout_height="@dimen/layout_height_42"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_height_55"
            app:srcCompat="@drawable/ic_head" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_nick_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_nick_name"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <EditText
            android:id="@+id/et_nick_name"
            style="@style/info_edit"
            android:hint="@string/tip_nick_name"
            android:maxLength="8" />


        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:background="@color/black_f4" />

    <RelativeLayout
        android:id="@+id/rel_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_name"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_name"
            style="@style/info_edit"
            android:hint="@string/tip_name"
            android:maxLength="8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_age"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_age"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/layout_height_55"
            android:gravity="center"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_phone"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/info_edit"
            android:hint="@string/tip_tel_phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_city"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_city"
            style="@style/info_edit"
            android:hint="@string/tip_city" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_profession"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_profession"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_profession"
            style="@style/info_edit"
            android:hint="@string/tip_profession" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_50"
        android:layout_marginStart="@dimen/image_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_email"
            android:textColor="@color/black3"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="@dimen/image_20"
            android:layout_height="@dimen/image_22"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/text_margin_18"
            android:background="@drawable/ic_arrow_right"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_email"
            style="@style/info_edit"
            android:hint="@string/tip_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="@color/grayD4" />
    </RelativeLayout>

</LinearLayout>
